objects/FieloEE__Tag__c.object
<CustomObject>
    <description>Tags that can be applied to a reward or a content feed in order to highlight or segment them.</description>
    <fields>
        <fullName>FieloEE__AttachmentId__c</fullName>
        <description>Image of the tag.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Upload an image for this tag.</inlineHelpText>
        <label>Attachment Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Filter__c</fullName>
        <label>Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MyRewards</fullName>
                </value>
                <value>
                    <fullName>WishList</fullName>
                </value>
                <value>
                    <fullName>Likes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Image__c</fullName>
        <description>Link to the physical attachment.</description>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+FieloEE__AttachmentId__c, &quot;photo&quot;,50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Tag</relationshipLabel>
        <relationshipName>Tag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag</label>
        <referenceTo>FieloEE__Tag__c</referenceTo>
        <relationshipLabel>Tag</relationshipLabel>
        <relationshipName>Tag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__TotalRewards__c</fullName>
        <description>Quantity of rewards with this tag.</description>
        <label>Total Rewards</label>
        <summaryForeignKey>FieloEE__RewardTag__c.FieloEE__Tag__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Tag</label>
    <listViews>
        <fullName>FieloEE__All</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__TotalRewards__c</columns>
        <columns>FieloEE__Order__c</columns>
        <columns>FieloEE__Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__All_Tags</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Image__c</columns>
        <columns>FieloEE__TotalRewards__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Tags</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tag</pluralLabel>
    <recordTypes>
        <fullName>FieloEE__Dynamic</fullName>
        <active>true</active>
        <label>Dynamic</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloEE__OrderMustBePositive</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__Order__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloEE__Order__c</errorDisplayField>
        <errorMessage>Order must be positive</errorMessage>
    </validationRules>
</CustomObject>